---- Changes since 4.02 ----
Updated the SMF script installer to version 2.0.5, X2CRM to 3.5.2, Django to 1.5.4 and 1.4.8, Roundcube to 0.9.4, osCommerce to 2.3.3.4, SugarCRM to 6.5.15, Z-push to 2.1.0, AjaXplorer to 5.0.3, MediaWiki to 1.12.2 and 1.19.8, phpMyAdmin to 4.0.8, Moodle to 2.5.2, ZenPhoto to 1.4.5.5, CMS Made Simple to 1.11.9, Wordpress to 3.6.1, phpList to 3.0.5, FengOffice to 2.3.2.1, Radiant to 1.1.4, phpBB to 3.0.12, Magento to 1.8.0.0, TextPattern to 4.5.5, and ownCloud to 5.0.12.
Mail client auto-configuration now supports Outlook as well as Thunderbird.
Backups from other control panels can now be migrated from their un-compressed or extract directories.
Multiple virtual servers can now share a single IPv6 address, just as can be done for IPv4. Each domain can either not use IPv6 at all, use one of several shared addresses, or have its own private address.
When migrating a virtual server from cPanel, Plesk or some other control panel, you can now select if it will be assigned an IPv6 address by Virtualmin.
The Dallas or Chicago datacenters can now be explictly selected when using Rackspace cloud files.
---- Changes since 4.03 ----
Access to plugin modules is now granted to resellers.
Updated the Ajaxplorer script installer to 5.0.4 (and renamed to Pydio), TWiki to 6.0.0, Roundcube to 0.9.5, SMF to 2.0.6, SugarCRM to 6.5.16, WordPress to 3.7.1, Django to 1.4.9 and 1.5.5, MoinMoin to 1.9.7, ZenPhoto to 1.4.5.7, TikiWiki to 11.1 and 6.13, phpMyAdmin to 4.0.9, OwnCloud to 5.0.13, and Dolibarr to 3.4.1.
Added the Mail Rate Limiting page for restricting the rate at which messages will be accepted by the system, either for local delivery or relaying. This can be useful to prevent spammers from using a hijacked account or website to rapidly send large amounts of email.
All incoming email to a domain can now be silently BCCd to another address, similar to the existing option for BCCing outgoing messages.