@@ -38,5 +38,4 @@
 
  - Amazon tax docs
 
- - Directadmin migration
-	- https://www.virtualmin.com/node/23126
+ - Sign file manager applet
